# swagger/RedShirt.Example.Api.Interop/swagger.json
@@ -1777,6 +1777,41 @@
         }
       }
     },
+    "/uploads/{id}/purge": {
+      "delete": {
+        "tags": [
+          "Upload"
+        ],
+        "operationId": "Upload_Purge",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "guid"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": ""
+          },
+          "404": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/uploads/{id}/details": {
       "get": {
         "tags": [
